@@ -13,6 +13,7 @@
 	added detection and support for openjdk
 	configure script uses -g3 if available when --enable-debug is
 		specified
+	added support for using the oracle statement cache
 
 0.46 - refactored the translation framework to mimic the trigger framework
 	added make.batch file for building on windows
